crates/general/fixtures/invalid/mixed_pipeline.zt
-- A single pipeline chain cannot mix forward and backward directions.

{
  bad = 1 |> f <| 2;
}
